--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serveo": "vue-cli-service serve --open",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "@mdi/font": "^2.6.95",
     "core-js": "^2.6.5",
+    "faker": "^4.1.0",
     "firebase": "^6.0.0",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue2-google-maps": "^0.10.6",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
